--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -105,14 +105,14 @@ jobs:
           }\n\
         }\n/'
 
-  public_active_active_legacy:
+  public_active_active_replicated:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
     secrets: inherit
-    name: Destroy resources from Azure Public Active/Active (Legacy)
-    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active-legacy') }}
+    name: Destroy resources from Azure Public Active/Active (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active-replicated') }}
     with:
       cloud: Azure
-      test_name: Public Active/Active (Legacy)
+      test_name: Public Active/Active (Replicated)
       utility_test: true
       is_replicated_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
@@ -120,17 +120,17 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       work_dir: ./tests/public-active-active
-      TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_LEGACY_TFC_TOKEN
-      TFC_workspace_substitution_pattern: s/azure-public-active-active/azure-public-active-active-legacy/
+      TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-public-active-active/azure-public-active-active-replicated/
 
-  private_active_active_legacy:
+  private_active_active_replicated:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
     secrets: inherit
-    name: Destroy resources from Azure Private Active/Active (Legacy)
-    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active-legacy') }}
+    name: Destroy resources from Azure Private Active/Active (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active-replicated') }}
     with:
       cloud: Azure
-      test_name: Private Active/Active (Legacy)
+      test_name: Private Active/Active (Replicated)
       utility_test: true
       is_replicated_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
@@ -138,17 +138,17 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       work_dir: ./tests/private-active-active
-      TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_LEGACY_TFC_TOKEN
-      TFC_workspace_substitution_pattern: s/azure-private-active-active/azure-private-active-active-legacy/
+      TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-private-active-active/azure-private-active-active-replicated/
 
-  private_tcp_active_active_legacy:
+  private_tcp_active_active_replicated:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
     secrets: inherit
-    name: Destroy resources from Azure Private TCP Active/Active (Legacy)
-    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active-legacy') }}
+    name: Destroy resources from Azure Private TCP Active/Active (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active-replicated') }}
     with:
       cloud: Azure
-      test_name: Private TCP Active/Active (Legacy)
+      test_name: Private TCP Active/Active (Replicated)
       utility_test: true
       is_replicated_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
@@ -156,17 +156,17 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       work_dir: ./tests/private-tcp-active-active
-      TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_LEGACY_TFC_TOKEN
-      TFC_workspace_substitution_pattern: s/azure-private-tcp-active-active/azure-private-tcp-active-active-legacy/
+      TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-private-tcp-active-active/azure-private-tcp-active-active-replicated/
 
-  standalone_external_legacy:
+  standalone_external_replicated:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
     secrets: inherit
-    name: Destroy resources from Azure Standalone External (Legacy)
-    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external-legacy') }}
+    name: Destroy resources from Azure Standalone External (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external-replicated') }}
     with:
       cloud: Azure
-      test_name: Standalone External (Legacy)
+      test_name: Standalone External (Replicated)
       utility_test: true
       is_replicated_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
@@ -174,23 +174,23 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       work_dir: ./tests/standalone-external
-      TFC_token_secret_name: STANDALONE_EXTERNAL_LEGACY_TFC_TOKEN
+      TFC_token_secret_name: STANDALONE_EXTERNAL_REPLICATED_TFC_TOKEN
       TFC_workspace_substitution_pattern: 's/terraform {/terraform {\n\
         backend "remote" {\n\
           organization = "terraform-enterprise-modules-test"\n\
           workspaces {\n\
-            name = "azure-standalone-external-legacy"\n\
+            name = "azure-standalone-external-replicated"\n\
           }\n\
         }\n/'
 
-  standalone_mounted_disk_legacy:
+  standalone_mounted_disk_replicated:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
     secrets: inherit
-    name: Destroy resources from Azure Standalone Mounted Disk (Legacy)
-    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk-legacy') }}
+    name: Destroy resources from Azure Standalone Mounted Disk (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk-replicated') }}
     with:
       cloud: Azure
-      test_name: Standalone Mounted Disk (Legacy)
+      test_name: Standalone Mounted Disk (Replicated)
       utility_test: true
       is_replicated_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
@@ -198,11 +198,11 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       work_dir: ./tests/standalone-mounted-disk
-      TFC_token_secret_name: STANDALONE_MOUNTED_DISK_LEGACY_TFC_TOKEN
+      TFC_token_secret_name: STANDALONE_MOUNTED_DISK_REPLICATED_TFC_TOKEN
       TFC_workspace_substitution_pattern: 's/terraform {/terraform {\n\
         backend "remote" {\n\
           organization = "terraform-enterprise-modules-test"\n\
           workspaces {\n\
-            name = "azure-standalone-mounted-disk-legacy"\n\
+            name = "azure-standalone-mounted-disk-replicated"\n\
           }\n\
         }\n/'
