--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -6,14 +6,16 @@ on:
       - destroy-command
 
 jobs:
-  azure_public_active_active:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@main
+  public_active_active:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
     secrets: inherit
     name: Destroy resources from Azure Public Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active') }}
     with:
+      cloud: Azure
       test_name: Public Active/Active
       utility_test: false
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -21,14 +23,16 @@ jobs:
       work_dir: ./tests/public-active-active
       TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_TFC_TOKEN
 
-  azure_private_active_active:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@main
+  private_active_active:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
     secrets: inherit
     name: Destroy resources from Azure Private Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active') }}
     with:
+      cloud: Azure
       test_name: Private Active/Active
       utility_test: false
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -36,14 +40,16 @@ jobs:
       work_dir: ./tests/private-active-active
       TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_TFC_TOKEN
 
-  azure_private_tcp_active_active:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@main
+  private_tcp_active_active:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
     secrets: inherit
     name: Destroy resources from Azure Private TCP Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active') }}
     with:
+      cloud: Azure
       test_name: Private TCP Active/Active
       utility_test: false
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -51,14 +57,16 @@ jobs:
       work_dir: ./tests/private-tcp-active-active
       TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_TFC_TOKEN
 
-  azure_standalone_external:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@main
+  standalone_external:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
     secrets: inherit
     name: Destroy resources from Azure Standalone External
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external') }}
     with:
+      cloud: Azure
       test_name: Standalone External
       utility_test: false
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -73,14 +81,16 @@ jobs:
           }\n\
         }\n/'
 
-  azure_standalone_mounted_disk:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@main
+  standalone_mounted_disk:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
     secrets: inherit
     name: Destroy resources from Azure Standalone Mounted Disk
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk') }}
     with:
+      cloud: Azure
       test_name: Standalone Mounted Disk
       utility_test: false
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -92,5 +102,107 @@ jobs:
           organization = "terraform-enterprise-modules-test"\n\
           workspaces {\n\
             name = "azure-standalone-mounted-disk"\n\
+          }\n\
+        }\n/'
+
+  public_active_active_replicated:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
+    secrets: inherit
+    name: Destroy resources from Azure Public Active/Active (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active-replicated') }}
+    with:
+      cloud: Azure
+      test_name: Public Active/Active (Replicated)
+      utility_test: true
+      is_replicated_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      work_dir: ./tests/public-active-active
+      TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-public-active-active/azure-public-active-active-replicated/
+
+  private_active_active_replicated:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
+    secrets: inherit
+    name: Destroy resources from Azure Private Active/Active (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active-replicated') }}
+    with:
+      cloud: Azure
+      test_name: Private Active/Active (Replicated)
+      utility_test: true
+      is_replicated_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      work_dir: ./tests/private-active-active
+      TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-private-active-active/azure-private-active-active-replicated/
+
+  private_tcp_active_active_replicated:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
+    secrets: inherit
+    name: Destroy resources from Azure Private TCP Active/Active (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active-replicated') }}
+    with:
+      cloud: Azure
+      test_name: Private TCP Active/Active (Replicated)
+      utility_test: true
+      is_replicated_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      work_dir: ./tests/private-tcp-active-active
+      TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-private-tcp-active-active/azure-private-tcp-active-active-replicated/
+
+  standalone_external_replicated:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
+    secrets: inherit
+    name: Destroy resources from Azure Standalone External (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external-replicated') }}
+    with:
+      cloud: Azure
+      test_name: Standalone External (Replicated)
+      utility_test: true
+      is_replicated_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      work_dir: ./tests/standalone-external
+      TFC_token_secret_name: STANDALONE_EXTERNAL_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: 's/terraform {/terraform {\n\
+        backend "remote" {\n\
+          organization = "terraform-enterprise-modules-test"\n\
+          workspaces {\n\
+            name = "azure-standalone-external-replicated"\n\
+          }\n\
+        }\n/'
+
+  standalone_mounted_disk_replicated:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@main
+    secrets: inherit
+    name: Destroy resources from Azure Standalone Mounted Disk (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk-replicated') }}
+    with:
+      cloud: Azure
+      test_name: Standalone Mounted Disk (Replicated)
+      utility_test: true
+      is_replicated_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      work_dir: ./tests/standalone-mounted-disk
+      TFC_token_secret_name: STANDALONE_MOUNTED_DISK_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: 's/terraform {/terraform {\n\
+        backend "remote" {\n\
+          organization = "terraform-enterprise-modules-test"\n\
+          workspaces {\n\
+            name = "azure-standalone-mounted-disk-replicated"\n\
           }\n\
         }\n/'
