--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -12,7 +12,8 @@ jobs:
     name: Run tf-test on Azure Standalone External
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external') }}
     with:
-      test_name: Standalone External
+      test_name: Standalone External (FDO)
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       work_dir: ./tests/standalone-external
       k6_work_dir: ./tests/tfe-load-test
@@ -35,7 +36,8 @@ jobs:
     name: Run tf-test on Azure Standalone Mounted Disk
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk') }}
     with:
-      test_name: Standalone Mounted Disk
+      test_name: Standalone Mounted Disk (FDO)
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       work_dir: ./tests/standalone-mounted-disk
       k6_work_dir: ./tests/tfe-load-test
@@ -58,7 +60,8 @@ jobs:
     name: Run tf-test on Azure Public Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active') }}
     with:
-      test_name: Public Active/Active
+      test_name: Public Active/Active (FDO)
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       work_dir: ./tests/public-active-active
       k6_work_dir: ./tests/tfe-load-test
@@ -67,7 +70,6 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_TFC_TOKEN
-      TFC_workspace_substitution_pattern: s/azure-public-active-active/azure-public-active-active/
   
   private_active_active:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-tests.yml@main
@@ -75,7 +77,8 @@ jobs:
     name: Run tf-test on Azure Private Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active') }}
     with:
-      test_name: Private Active/Active
+      test_name: Private Active/Active (FDO)
+      is_replicated_deployment: false
       utility_test: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       work_dir: ./tests/private-active-active
@@ -84,7 +87,6 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_TFC_TOKEN
-      TFC_workspace_substitution_pattern: s/azure-private-active-active/azure-private-active-active/
       bastion_ssh_private_key_secret_name: PRIVATE_ACTIVE_ACTIVE_BASTION_SSH_KEY_BASE64
 
   private_tcp_active_active:
@@ -93,7 +95,8 @@ jobs:
     name: Run tf-test on Azure Private TCP Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active') }}
     with:
-      test_name: Private TCP Active/Active
+      test_name: Private TCP Active/Active (FDO)
+      is_replicated_deployment: false
       utility_test: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       work_dir: ./tests/private-tcp-active-active
@@ -102,5 +105,108 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_TFC_TOKEN
-      TFC_workspace_substitution_pattern: s/azure-private-tcp-active-active/azure-private-tcp-active-active/
+      bastion_ssh_private_key_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_BASTION_SSH_KEY_BASE64
+
+  standalone_external_replicated:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-tests.yml@main
+    secrets: inherit
+    name: Run tf-test on Azure Standalone External (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external-replicated') }}
+    with:
+      test_name: Standalone External
+      is_replicated_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      work_dir: ./tests/standalone-external
+      k6_work_dir: ./tests/tfe-load-test
+      utility_test: false
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      TFC_token_secret_name: STANDALONE_EXTERNAL_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: 's/terraform {/terraform {\n\
+        backend "remote" {\n\
+          organization = "terraform-enterprise-modules-test"\n\
+          workspaces {\n\
+            name = "azure-standalone-external-replicated"\n\
+          }\n\
+        }\n/'
+
+  standalone_mounted_disk_replicated:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-tests.yml@main
+    secrets: inherit
+    name: Run tf-test on Azure Standalone Mounted Disk (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk-replicated') }}
+    with:
+      test_name: Standalone Mounted Disk
+      is_replicated_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      work_dir: ./tests/standalone-mounted-disk
+      k6_work_dir: ./tests/tfe-load-test
+      utility_test: false
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      TFC_token_secret_name: STANDALONE_MOUNTED_DISK_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: 's/terraform {/terraform {\n\
+        backend "remote" {\n\
+          organization = "terraform-enterprise-modules-test"\n\
+          workspaces {\n\
+            name = "azure-standalone-mounted-disk-replicated"\n\
+          }\n\
+        }\n/'
+
+  public_active_active_replicated:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-tests.yml@main
+    secrets: inherit
+    name: Run tf-test on Azure Public Active/Active (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active-replicated') }}
+    with:
+      test_name: Public Active/Active
+      is_replicated_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      work_dir: ./tests/public-active-active
+      k6_work_dir: ./tests/tfe-load-test
+      utility_test: false
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-public-active-active/azure-public-active-active-replicated/
+  
+  private_active_active_replicated:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-tests.yml@main
+    secrets: inherit
+    name: Run tf-test on Azure Private Active/Active (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active-replicated') }}
+    with:
+      test_name: Private Active/Active
+      is_replicated_deployment: true
+      utility_test: false
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      work_dir: ./tests/private-active-active
+      k6_work_dir: ./tests/tfe-load-test
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-private-active-active/azure-private-active-active-replicated/
+      bastion_ssh_private_key_secret_name: PRIVATE_ACTIVE_ACTIVE_BASTION_SSH_KEY_BASE64
+
+  private_tcp_active_active_replicated:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-tests.yml@main
+    secrets: inherit
+    name: Run tf-test on Azure Private TCP Active/Active (Replicated)
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active-replicated') }}
+    with:
+      test_name: Private TCP Active/Active
+      is_replicated_deployment: true
+      utility_test: false
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      work_dir: ./tests/private-tcp-active-active
+      k6_work_dir: ./tests/tfe-load-test
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_REPLICATED_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-private-tcp-active-active/azure-private-tcp-active-active-replicated/
       bastion_ssh_private_key_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_BASTION_SSH_KEY_BASE64
