--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -63,6 +63,15 @@ jobs:
             ${{ github.workspace }}/${m}
         done
 
+    - name: Lint tests directory in a loop
+      run: |
+        for m in $(ls -1d tests/*/)
+        do
+          tflint \
+            --config ${{ github.workspace }}/.tflint.hcl \
+            ${{ github.workspace }}/${m}
+        done
+
     - name: Lint examples directory in a loop
       run: |
         for m in $(ls -1d examples/*/)
